--- a/style.css
+++ b/style.css
@@ -7,32 +7,37 @@ body {
     margin: 0;
 }
 
+p {  margin: 0;  }
+
 .headers,
 .first-container,
 .second-container,
+.third-container,
+.fourth-container,
 .footer {
     display: flex;
-    flex: auto;
+    flex: 1;
     background-color: #1F2937;
     justify-content: space-between;
-    padding: 16px 200px;
+    padding: 64px 400px;
 }
 
-.boxes {
+.headers {
+    padding-top: 16px;
+    padding-bottom: 0;
+}
+
+.links {
     display: flex;
-    gap: 45px;
-}
-
-.box img{
-    border-radius: 8px;
-    border: 3px solid #3882F6;
-    
+    gap: 16px;
+    margin-top:16px;
 }
 
 .first-container {
     align-items: center;
     gap: 64px;
     padding: 100px auto;
+    padding-bottom: 50px;
 }
 
 .second-container {
@@ -43,6 +48,83 @@ body {
     gap: 30px;
 }
 
+.information-header {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+}
+
+.boxes {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 45px;
+}
+
+.box img {
+    border-radius: 8px;
+    border: 3px solid #3882F6;
+}
+
+.third-container {
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    align-items: center;
+    padding-left: 500px;
+    padding-right: 500px;
+    gap: 16px;
+
+}
+
+.quote {
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+}
+
+.author {
+    font-weight: bold;
+    align-self: flex-end;
+    margin-right: 32px;
+    font-size: 20px;
+}
+
+
+.fourth-container {
+    background-color: white;
+    justify-content: center;
+    padding-left: 400px;
+    padding-right: 400px;
+    max-width: 800px;
+    margin: auto;
+}
+
+.color-container {
+    display: flex;
+    padding: 32px 64px;
+    justify-content: space-between;
+    background-color: #3882F6;
+    flex: auto;
+    align-items: center;
+    gap: 64px;
+}
+
+.smaller-text {
+    font-size: 24px;
+}
+
+.border-white {
+    border: 2px solid white;
+    margin-right: 0;
+    width: 84px;
+    text-align: center;
+}
+
+.footer {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    justify-content: center;
+}
 
 .text-together {
     display: flex;
@@ -50,29 +132,10 @@ body {
     gap: 16px;
 }
 
-
 .main-text {
     font-size: 48px;
     font-weight: 900;
     color: #F9FAF8
-}
-
-.button {
-    background-color: #3882F6;
-    color: #F9FAF8;
-    border-radius: 8px;
-    padding: 8px 16px;
-    margin-right: auto;
-}
-
-.information-header {
-    font-size: 36px;
-    font-weight: 900;
-    color: #1F2937;
-}
-
-p {
-    margin: 0;
 }
 
 a,
@@ -82,8 +145,10 @@ a,
     color: #E5E7EB;
 }
 
-.links {
-    display: flex;
-    gap: 16px;
-    margin-top:16px;
+.button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border-radius: 8px;
+    padding: 8px 16px;
+    margin-right: auto;
 }
